syntax_check.log
  File "run_agent.py", line 6748
    this topic.  Inspired by Claude Code's "/compact <focus>".
                                        ^
SyntaxError: unterminated string literal (detected at line 6748)
